// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/WorkflowTemplate/DraggableCard render draggable card with desc and remove icon 1`] = `
<body>
  <div>
    <div
      aria-describedby=""
      aria-disabled="false"
      aria-roledescription="sortable"
      class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space"
      role="button"
      style="cursor: move;"
      tabindex="0"
    >
      <div
        class="ant-col icon-wrapper"
      >
        <span
          class="honour-icon"
        >
          <svg
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.25 2.333v8.588a.29.29 0 0 1-.174.267L7 13.434l-5.076-2.246a.29.29 0 0 1-.174-.268V2.333H.583V1.167h12.834v1.166zM4.667 7v1.167h4.666V7zm0-2.333v1.166h4.666V4.667z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box"
      >
        <div
          class="ant-row ant-row-no-wrap"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
          >
            <div
              class="ant-card-body"
            >
              <span
                class="step-card-title"
              >
                test
              </span>
              <div
                class="step-card-desc"
              >
                test desc
              </div>
              <button
                class="ant-btn ant-btn-circle ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-19ox3vh"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/DraggableCard render draggable card with empty desc 1`] = `
<body>
  <div>
    <div
      aria-describedby=""
      aria-disabled="false"
      aria-roledescription="sortable"
      class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space"
      role="button"
      style="cursor: move;"
      tabindex="0"
    >
      <div
        class="ant-col icon-wrapper"
      >
        <span
          class="honour-icon"
        >
          <svg
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.25 2.333v8.588a.29.29 0 0 1-.174.267L7 13.434l-5.076-2.246a.29.29 0 0 1-.174-.268V2.333H.583V1.167h12.834v1.166zM4.667 7v1.167h4.666V7zm0-2.333v1.166h4.666V4.667z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box"
      >
        <div
          class="ant-row ant-row-no-wrap"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
          >
            <div
              class="ant-card-body"
            >
              <span
                class="step-card-title"
              >
                test
              </span>
              <div
                class="step-card-desc"
              >
                -
              </div>
              <div
                class="step-card-operator"
              >
                <div
                  class="operator-title"
                >
                  review
                </div>
                <div
                  class="operator-content"
                >
                  admin
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/DraggableCard render no card 1`] = `
<body>
  <div>
    <div
      aria-describedby=""
      aria-disabled="false"
      aria-roledescription="sortable"
      class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space"
      role="button"
      style="cursor: move;"
      tabindex="0"
    >
      <div
        class="ant-col icon-wrapper"
      >
        <span
          class="honour-icon"
        >
          <svg
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.25 2.333v8.588a.29.29 0 0 1-.174.267L7 13.434l-5.076-2.246a.29.29 0 0 1-.174-.268V2.333H.583V1.167h12.834v1.166zM4.667 7v1.167h4.666V7zm0-2.333v1.166h4.666V4.667z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-col step-box"
      >
        <div
          class="ant-row ant-row-no-wrap"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable step-card-style css-18lc8oi"
          >
            <div
              class="ant-card-body"
            >
              <span
                class="step-card-title"
              >
                test
              </span>
              <div
                class="step-card-desc"
              >
                -
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
